k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dorentme
  namespace: dorentme

spec:
  ingressClassName: nginx

  rules:
    - host: dorentme.wdchocopie.id.vn
      http:
        paths:
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /api/tryon
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
